2004-06-23  Todd Berman  <tberman@off.net>

	* Services/ServiceManager.cs: make GetService a static method, hide
	the instance everywhere.

2004-05-29  Vladimir Vukicevic  <vladimir@pobox.com>

	* Services/GettextCatalog.cs: fix marshalling issues and gettext

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Services/GettextCatalog.cs: oops, thats not what i wanted i guess.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Services/GettextCatalog.cs: change to string marshaling to prevent
	leaks.

2004-04-04  Todd Berman  <tberman@sevenl.net>

	* AddIns/AddInTreeSingleton.cs: Change to .addin.xml to allow gettext

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: add GettextCatalog.cs.
	* Services/GettextCatalog.cs: move here so other libs can use easier.